--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header>
+    <!-- navbar info -->
     <div class="info">
       <section class="container first-nav">
         <div>
@@ -28,7 +29,50 @@
           <i class="fas fa-shopping-cart"></i>
           <a href="#">Cart</a>
         </div>
+        <select>
+          <option value="English">English</option>
+          <option value="Italiano">Italiano</option>
+          <option value="Francais">Francais</option>
+          <option value="Spanish">Spanish</option>
+        </select>
       </section>
+    </div>
+
+    <!-- navbar principale -->
+    <div class="navbar">
+      <nav class="container">
+        <div class="logo">
+          <img src="./assets/img/logo_painter.png" alt="painter">
+        </div>
+        <div>
+          <a href="#">Products</a>
+          <i class="fas fa-angle-down"></i>
+        </div>
+        <div>
+          <a href="#">Brushes</a>
+          <i class="fas fa-angle-down"></i>
+        </div>
+        <div>
+          <a href="#">Wacom Tablets</a>
+        </div>
+        <div>
+          <a href="#">Special Offers</a>
+        </div>
+        <div>
+          <a href="#">Free Trials</a>
+        </div>
+        <div>
+          <a href="#">Business</a>
+        </div>
+        <div>
+          <a href="#">Support</a>
+          <i class="fas fa-angle-down"></i>
+        </div>
+        <div>
+          <a href="#">Learning</a>
+          <i class="fas fa-angle-down"></i>
+        </div>
+      </nav>
     </div>
   </header>
 
