--- a/index.html
+++ b/index.html
@@ -76,7 +76,22 @@
     </div>
 
     <div class="jumbo">
-      
+      <div class="container jumbo-child">
+        <div class="logo-2021">
+          <img class="mt-50" src="./assets/img/painter-2021.png" alt="painter">
+        </div>
+        <p class="mt-20">The most realistic painting experience you'll find hard to resist</p>
+
+        <div class="mt-35 pink">
+          <h4><i>Flash Sale</i></h4>
+          <p><i>Save up to $130 + Get Signature Style Brush Pack Bundle FREE (worth $179.99)</i></p>
+        </div>
+
+        <div class="mt-45">
+          <button type="button" name="button">Learn more</button>
+          <button type="button" name="button">Download trial</button>
+        </div>
+      </div>
     </div>
   </header>
 
