esercizio terminato(no bonus)

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <p class="mt-20">The most realistic painting experience you'll find hard to resist</p>
 
         <div class="mt-35 pink">
-          <h4><i>Flash Sale</i></h4>
-          <p><i>Save up to $130 + Get Signature Style Brush Pack Bundle FREE (worth $179.99)</i></p>
+          <h4><i>Limited-time offer</i></h4>
+          <p><i>Get Signature Style Brush Pack Bundle FREE (worth $179.99)</i></p>
         </div>
 
         <div class="mt-45">
@@ -94,6 +94,151 @@
       </div>
     </div>
   </header>
+
+  <main class="pb-25">
+    <div class="container">
+      <h2 class="text-cent pt-45">More painting possibilities</h2>
+
+      <!-- prima parte main -->
+      <div class="card disp-flex mt-45">
+        <div class="card-child">
+          <img src="./assets/img/ptr-module.jpg" alt="">
+          <div class="under-image">
+            <h4>Painter Essentials 8</h4>
+            <p class="mt-20">The best affordable painting software for beginners</p>
+            <a class="mt-20" href="#">Learn more</a>
+          </div>
+        </div>
+        <div class="card-child">
+          <img src="./assets/img/particleshop-module.jpg" alt="">
+          <div class="under-image">
+            <h4>ParticleShop</h4>
+            <p class="mt-20">Powerful Adobe® Photoshop® brush plugin powered by Painter</p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+        <div class="card-child">
+          <img src="./assets/img/brush-pack-module.jpg" alt="">
+          <div class="under-image">
+            <h4>Brush packs</h4>
+            <p class="mt-20">Diverse add-on packs to embellish photo composites, graphic designs and paintings</p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- seconda parte main -->
+      <div class="window mt-70">
+        <div class="row">
+          <div class="window-child back-vio">
+            <h2>Wacom + Painter 2021</h2>
+            <p>Satisfy all your digital painting needs with the power and precision of these award-winning bundles.</p>
+            <button type="button" name="button">learn more</button>
+          </div>
+          <div class="window-child">
+            <div>
+              <img src="./assets/img/wacom-painter.jpg" alt="">
+              <img id="wacom-over" src="./assets/img/wacom.png" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="window-child">
+            <img src="./assets/img/painter-master.jpg" alt="">
+          </div>
+          <div class="window-child back-grey">
+            <h2>Painter Masters</h2>
+            <p>Gain inspiration and knowledge from professional artists who have mastered Painter, and excel in their craft.</p>
+            <button type="button" name="button">learn more</button>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="window-child back-sky">
+            <h2>Business & Education</h2>
+            <p>Save money on our award-winning painting software thanks to affordable and flexible licensing options.</p>
+            <button type="button" name="button">learn more</button>
+          </div>
+          <div class="window-child">
+            <img src="./assets/img/business-education.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <!-- terza parte main -->
+      <div class="links mt-50 disp-flex">
+        <div class="links-child">
+          <h4>Products</h4>
+          <ul>
+            <li><a href="#">Corel Painter</a></li>
+            <li><a href="#">Particle Shop</a></li>
+            <li><a href="#">Painter Essentials</a></li>
+            <li><a href="#">Special Offers</a></li>
+            <li><a href="#">Free Trials</a></li>
+            <li><a href="#">All products</a></li>
+          </ul>
+        </div>
+        <div class="links-child">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#">Licensing</a></li>
+            <li><a href="#">Tutorial & Tips</a></li>
+            <li><a href="#">Webinars</a></li>
+            <li><a href="#">The Painter Factory</a></li>
+            <li><a href="#">Discovery Centre</a></li>
+            <li><a href="#">Beta Programs</a></li>
+          </ul>
+        </div>
+        <div class="links-child">
+          <h4>Support</h4>
+          <ul>
+            <li><a href="#">Register your product</a></li>
+            <li><a href="#">Patches & Updates</a></li>
+            <li><a href="#">Knowledgebase</a></li>
+            <li><a href="#">Uninstall instructions</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </div>
+        <div class="links-child">
+          <h4>About Corel</h4>
+          <ul>
+            <li><a href="#">Company information</a></li>
+            <li><a href="#">Newsroom</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Partner Program</a></li>
+            <li><a href="#">Legal Information</a></li>
+            <li><a href="#">EULA</a></li>
+            <ul class="social mt-20">
+              <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+              <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+              <li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
+              <li><a href="#"><i class="fab fa-pinterest-square"></i></a></li>
+              <li><a href="#"><i class="fas fa-rss-square"></i></a></li>
+            </ul>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="disp-flex container">
+      <div class="logo-footer">
+        <img src="./assets/img/corelAdvantage.png" alt="">
+        <img src="./assets/img/logo-bbb.png" alt="">
+        <img src="./assets/img/101.png" alt="">
+      </div>
+
+      <div class="copyright">
+        <a href="#">Team of Use</a>
+        <a href="#">Privacy</a>
+        <a href="#">Cookies</a>
+        <p>Copyright © 2021 Corel Corporation. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
